--- a/JavaScript/Assignment/index.html
+++ b/JavaScript/Assignment/index.html
@@ -3,10 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Assignment</title>
+    <title>Javascript Assignments</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 30px;
+            background-color: #f9f9f9;
+        }
+        #p1 {
+            color: #2c3e50;
+            font-size: 1.2em;
+        }
+        .p2 {
+            color: #2980b9;
+            margin-bottom: 15px;
+        }
+        table.table {
+            border-collapse: collapse;
+            width: 50%;
+            background: #fff;
+        }
+        table.table th, table.table td {
+            border: 1px solid #ccc;
+            padding: 8px 12px;
+            text-align: left;
+        }
+        table.table th {
+            background: #eaeaea;
+        }
+    </style>
 </head>
 <body>
-    <h1>Learning Java Script</h1>
+    <p id="p1">
+        <b> Learning Java Script</b>
+    </p>
+    <p class="p2"></p>
+        <b> Understanding DOM</b>
+    </p>
+    <table class="table">
+        <tr>
+            <th>Sr.No.</th>
+            <th>Player Name</th>
+        </tr>
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
