--- a/JavaScript/Assignment/index.html
+++ b/JavaScript/Assignment/index.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Assignments</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 30px;
-            background-color: #f9f9f9;
-        }
-        #p1 {
-            color: #2c3e50;
-            font-size: 1.2em;
-        }
-        .p2 {
-            color: #2980b9;
-            margin-bottom: 15px;
-        }
-        table.table {
-            border-collapse: collapse;
-            width: 50%;
-            background: #fff;
-        }
-        table.table th, table.table td {
-            border: 1px solid #ccc;
-            padding: 8px 12px;
-            text-align: left;
-        }
-        table.table th {
-            background: #eaeaea;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p id="p1">
+    <!-- <p id="p1">
         <b> Learning Java Script</b>
     </p>
     <p class="p2"></p>
@@ -45,7 +20,23 @@
             <th>Sr.No.</th>
             <th>Player Name</th>
         </tr>
-    </table>
+    </table> -->
+
+    <!-- <p>error</p>
+    <p>This is Error Class</p>
+    <p>I have Done it</p>
+    <p>Success</p>
+    <p>Success Achieved</p> -->
+    <label>Name</label>
+    <input type="text" class="nameTxt" />
+    <button class="btnDisplay">Display</button>
+    <div class="nameDiv"></div>
+
+
+  <input type="text" class="inputTxt">
+ 
+  <input type="text" class="outputTxt" readonly>
     <script src="script.js"></script>
 </body>
+
 </html>
