--- a/Assignments/quiz_app/src/main/webapp/login.html
+++ b/Assignments/quiz_app/src/main/webapp/login.html
@@ -1,151 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Login</title>
-<style>
-@import
-	url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
-	;
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-body {
-	height: 100vh;
-	font-family: 'Inter', sans-serif;
-	background: linear-gradient(135deg, #00c6ff, #0072ff);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	animation: fadeIn 1s ease-in-out;
-}
-
-
-keyframes fadeIn {from { opacity:0;
-	transform: translateY(20px);
-}
-
-to {
-	opacity: 1;
-	transform: translateY(0);
-}
-
-}
-.container {
-	background-color: #fff;
-	padding: 35px;
-	border-radius: 12px;
-	box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
-	width: 360px;
-	animation: fadeIn 1.2s ease;
-}
-
-h2 {
-	margin-bottom: 20px;
-	font-size: 1.8rem;
-	font-weight: 600;
-	color: #333;
-	text-align: center;
-}
-
-.form-group {
-	position: relative;
-	margin-bottom: 25px;
-}
-
-input {
-	width: 100%;
-	padding: 14px 12px 14px 12px;
-	border: 1px solid #ccc;
-	border-radius: 8px;
-	font-size: 1rem;
-	transition: all 0.2s;
-}
-
-input:focus {
-	border-color: #0072ff;
-	outline: none;
-	box-shadow: 0 0 8px rgba(0, 114, 255, 0.3);
-}
-
-label {
-	position: absolute;
-	top: 50%;
-	left: 12px;
-	transform: translateY(-50%);
-	background: white;
-	padding: 0 5px;
-	font-size: 0.9rem;
-	color: #888;
-	pointer-events: none;
-	transition: 0.2s ease;
-}
-
-input:focus+label, input:not(:placeholder-shown)+label {
-	top: -8px;
-	font-size: 0.75rem;
-	color: #0072ff;
-}
-
-button {
-	width: 100%;
-	padding: 12px;
-	background: linear-gradient(to right, #0072ff, #00c6ff);
-	color: white;
-	font-weight: 600;
-	border: none;
-	border-radius: 8px;
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-button:hover {
-	box-shadow: 0 8px 15px rgba(0, 114, 255, 0.4);
-	transform: translateY(-2px);
-}
-
-.error {
-	color: #e63946;
-	text-align: center;
-	font-size: 0.9rem;
-	margin-bottom: 10px;
-}
-
-a {
-	display: block;
-	margin-top: 16px;
-	text-align: center;
-	color: #0072ff;
-	font-size: 0.9rem;
-	text-decoration: none;
-	transition: 0.3s;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<h2>Login</h2>
-		<p class="error" id="errorMessage"></p>
-		<form action="login" method="post">
-			<div class="form-group">
-				<input type="text" name="username" id="username" placeholder=" "
-					required /> <label for="username">Username</label>
-			</div>
-			<div class="form-group">
-				<input type="password" name="password" id="password" placeholder=" "
-					required /> <label for="password">Password</label>
-			</div>
-			<button type="submit">Login</button>
-		</form>
-		<a href="register.html">Don't have an account? Register</a>
-	</div>
+    <div class="container">
+        <h2>Login</h2>
+        <form action="login" method="post" onsubmit="return validateLoginForm()">
+            <div class="form-group">
+                <input type="text" name="username" id="username" placeholder=" " required>
+                <label for="username">Username</label>
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" id="password" placeholder=" " required>
+                <label for="password">Password</label>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+        <a href="register.html">Don't have an account? Register</a>
+    </div>
+    <script>
+        function validateLoginForm() {
+            const username = document.getElementById("username").value.trim();
+            const password = document.getElementById("password").value.trim();
+            if (!username || !password) {
+                alert("Please fill in all fields.");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
